# PECOStoNapkinXC

./: CMakeLists.txt  README.md
model_conv/: CMakeLists.txt  benchmark.cpp  conv.cpp
napkinXC/: CMakeLists.txt
napkinXC/experiments/: test_prediction_time.sh
napkinXC/src/: base.cpp  base.h  model.h  types.h
napkinXC/src/models/: plt.cpp  plt.h
pecos/pecos/core/utils/: parallel.hpp
pecos/pecos/core/xmc/: inference.hpp
